force-app/main/default/objects/Prospect_Profile__c/Prospect_Profile__c.object-meta.xml
<CustomObject>
    <description>Prospect Profile</description>
    <label>Prospect Profile</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospect Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>