force-app/main/default/objects/Prospect_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospect Profiles</relationshipLabel>
    <relationshipName>Prospect_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>