force-app/main/default/objects/Prospect_Profile__c/fields/Accounting_Firm__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Firm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accounting Firm</label>
    <length>60</length>
    <type>Text</type>
</CustomField>