force-app/main/default/objects/Prospect_Profile__c/fields/Accounting_Firm_For__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Firm_For__c</fullName>
    <formula>Account__r.Accounting_Firm__r.Name</formula>
    <label>Accounting Firm</label>
    <type>Text</type>
</CustomField>