force-app/main/default/objects/Prospect_Profile__c/fields/Annual_Sales_Range__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Range__c</fullName>
    <label>Annual Sales Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; $5MM</fullName>
            </value>
            <value>
                <fullName>$5MM - $10MM</fullName>
            </value>
            <value>
                <fullName>$10MM - $20MM</fullName>
            </value>
            <value>
                <fullName>$20MM - $50MM</fullName>
            </value>
            <value>
                <fullName>&gt; $50MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>