force-app/main/default/objects/Prospect_Profile__c/fields/Associated_Entities__c.field-meta.xml
<CustomField>
    <fullName>Associated_Entities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Associated Entities</label>
    <length>120</length>
    <type>Text</type>
</CustomField>