force-app/main/default/objects/Prospect_Profile__c/fields/Banking__c.field-meta.xml
<CustomField>
    <fullName>Banking__c</fullName>
    <label>Banking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working Capital LOC</fullName>
            </value>
            <value>
                <fullName>Commercial Mortgage</fullName>
            </value>
            <value>
                <fullName>Equipment Financing</fullName>
            </value>
            <value>
                <fullName>Letters of Credit</fullName>
            </value>
            <value>
                <fullName>Treasury Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>