force-app/main/default/objects/Prospect_Profile__c/fields/Business_Opportunities_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Business_Opportunities_Challenges__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Business Challenges They Foresee in Implementing the Business Opportunities.</inlineHelpText>
    <label>Foreseeable Implementation Challenges</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>