force-app/main/default/objects/Prospect_Profile__c/fields/Business_Opportunities_Pursuing__c.field-meta.xml
<CustomField>
    <fullName>Business_Opportunities_Pursuing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Business Opportunities They are Pursuing.</inlineHelpText>
    <label>Business Opportunities Pursuing</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>