force-app/main/default/objects/Prospect_Profile__c/fields/Business_Processes_5_Year__c.field-meta.xml
<CustomField>
    <fullName>Business_Processes_5_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Processes (5 Year)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>