force-app/main/default/objects/Prospect_Profile__c/fields/Changes_to_Business_Processes__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Business_Processes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Changes to Business Processes to Adjust for Opportunities and Challenges (For the Next 3 Years).</inlineHelpText>
    <label>Changes to Business Processes (3 Years)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>