force-app/main/default/objects/Prospect_Profile__c/fields/CurPro_Broker__c.field-meta.xml
<CustomField>
    <fullName>CurPro_Broker__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CurPro Broker</label>
    <length>35</length>
    <type>Text</type>
</CustomField>