force-app/main/default/objects/Prospect_Profile__c/fields/CurPro_Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>CurPro_Health_Insurance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CurPro Health Insurance</label>
    <length>35</length>
    <type>Text</type>
</CustomField>