force-app/main/default/objects/Prospect_Profile__c/fields/CurPro_International_Services__c.field-meta.xml
<CustomField>
    <fullName>CurPro_International_Services__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CurPro International Services</label>
    <length>35</length>
    <type>Text</type>
</CustomField>