force-app/main/default/objects/Prospect_Profile__c/fields/CurPro_Loans__c.field-meta.xml
<CustomField>
    <fullName>CurPro_Loans__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CurPro Loans</label>
    <length>35</length>
    <type>Text</type>
</CustomField>