force-app/main/default/objects/Prospect_Profile__c/fields/CurPro_Succession_Planning__c.field-meta.xml
<CustomField>
    <fullName>CurPro_Succession_Planning__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CurPro Succession Planning</label>
    <length>35</length>
    <type>Text</type>
</CustomField>