force-app/main/default/objects/Prospect_Profile__c/fields/CurPro_Trust__c.field-meta.xml
<CustomField>
    <fullName>CurPro_Trust__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CurPro Trust</label>
    <length>35</length>
    <type>Text</type>
</CustomField>