force-app/main/default/objects/Prospect_Profile__c/fields/CurPro_Wealth_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>CurPro_Wealth_Mgmt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CurPro Wealth Mgmt</label>
    <length>35</length>
    <type>Text</type>
</CustomField>