force-app/main/default/objects/Prospect_Profile__c/fields/Decline_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Decline_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decline/Renewal</label>
    <type>Checkbox</type>
</CustomField>