force-app/main/default/objects/Prospect_Profile__c/fields/Description_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description of Business</label>
    <length>120</length>
    <type>Text</type>
</CustomField>