force-app/main/default/objects/Prospect_Profile__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label>Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 10</fullName>
            </value>
            <value>
                <fullName>10 - 25</fullName>
            </value>
            <value>
                <fullName>25 - 50</fullName>
            </value>
            <value>
                <fullName>50 - 75</fullName>
            </value>
            <value>
                <fullName>75 - 100</fullName>
            </value>
            <value>
                <fullName>&gt; 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>