force-app/main/default/objects/Prospect_Profile__c/fields/External_Influencers__c.field-meta.xml
<CustomField>
    <fullName>External_Influencers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Influencers</label>
    <length>120</length>
    <type>Text</type>
</CustomField>