force-app/main/default/objects/Prospect_Profile__c/fields/Financial_Processes_1_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Processes_1_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Processes (1 Year)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>