force-app/main/default/objects/Prospect_Profile__c/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Growth</label>
    <type>Checkbox</type>
</CustomField>