force-app/main/default/objects/Prospect_Profile__c/fields/IndustryTrends1__c.field-meta.xml
<CustomField>
    <fullName>IndustryTrends1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Significant Industry Trend 1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>