force-app/main/default/objects/Prospect_Profile__c/fields/IndustryTrends2__c.field-meta.xml
<CustomField>
    <fullName>IndustryTrends2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Significant Industry Trend 2</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>