force-app/main/default/objects/Prospect_Profile__c/fields/IndustryTrends3__c.field-meta.xml
<CustomField>
    <fullName>IndustryTrends3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Significant Industry Trend 3</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>