force-app/main/default/objects/Prospect_Profile__c/fields/Investment_Banking__c.field-meta.xml
<CustomField>
    <fullName>Investment_Banking__c</fullName>
    <label>Investment Banking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bond Issuance</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>