force-app/main/default/objects/Prospect_Profile__c/fields/Key_Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision_Makers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Decision Makers</label>
    <length>120</length>
    <type>Text</type>
</CustomField>