force-app/main/default/objects/Prospect_Profile__c/fields/Law_Firm_Contact__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact</label>
    <length>60</length>
    <type>Text</type>
</CustomField>