force-app/main/default/objects/Prospect_Profile__c/fields/Legal_Firm_For__c.field-meta.xml
<CustomField>
    <fullName>Legal_Firm_For__c</fullName>
    <formula>Account__r.Legal_Firm__c</formula>
    <label>Legal Firm</label>
    <type>Text</type>
</CustomField>