force-app/main/default/objects/Prospect_Profile__c/fields/Life_Cycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Life_Cycle_Stage__c</fullName>
    <label>Life-Cycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start-up</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Mature</fullName>
            </value>
            <value>
                <fullName>Decline/Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>