force-app/main/default/objects/Prospect_Profile__c/fields/Mature__c.field-meta.xml
<CustomField>
    <fullName>Mature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mature</label>
    <type>Checkbox</type>
</CustomField>