force-app/main/default/objects/Prospect_Profile__c/fields/NAICS_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Description__c</fullName>
    <formula>Account__r.NAICS_Code_Description_ProBuild__c</formula>
    <label>NAICS Code Description</label>
    <type>Text</type>
</CustomField>