force-app/main/default/objects/Prospect_Profile__c/fields/NAICS_Code_For__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_For__c</fullName>
    <formula>Account__r.NAICS_Code_ProBuilder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS Code</label>
    <type>Text</type>
</CustomField>