force-app/main/default/objects/Prospect_Profile__c/fields/NAICS_Lookup__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>NAICS Lookup</label>
    <referenceTo>NAICS__c</referenceTo>
    <relationshipLabel>Prospect Profiles</relationshipLabel>
    <relationshipName>Prospect_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>