force-app/main/default/objects/Prospect_Profile__c/fields/OtherCurPro__c.field-meta.xml
<CustomField>
    <fullName>OtherCurPro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OtherCurPro</label>
    <length>35</length>
    <type>Text</type>
</CustomField>