force-app/main/default/objects/Prospect_Profile__c/fields/OtherOthPro__c.field-meta.xml
<CustomField>
    <fullName>OtherOthPro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OtherOthPro</label>
    <length>35</length>
    <type>Text</type>
</CustomField>