force-app/main/default/objects/Prospect_Profile__c/fields/OthPro_401k__c.field-meta.xml
<CustomField>
    <fullName>OthPro_401k__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OthPro 401(k)</label>
    <length>35</length>
    <type>Text</type>
</CustomField>