force-app/main/default/objects/Prospect_Profile__c/fields/OthPro_Broker__c.field-meta.xml
<CustomField>
    <fullName>OthPro_Broker__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OthPro Broker</label>
    <length>35</length>
    <type>Text</type>
</CustomField>