force-app/main/default/objects/Prospect_Profile__c/fields/OthPro_Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>OthPro_Health_Insurance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OthPro_Health_Insurance</label>
    <length>35</length>
    <type>Text</type>
</CustomField>