force-app/main/default/objects/Prospect_Profile__c/fields/OthPro_International_Services__c.field-meta.xml
<CustomField>
    <fullName>OthPro_International_Services__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OthPro International Services</label>
    <length>35</length>
    <type>Text</type>
</CustomField>