force-app/main/default/objects/Prospect_Profile__c/fields/OthPro_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>OthPro_Mortgage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OthPro Mortgage</label>
    <length>35</length>
    <type>Text</type>
</CustomField>