force-app/main/default/objects/Prospect_Profile__c/fields/OthPro_P_C__c.field-meta.xml
<CustomField>
    <fullName>OthPro_P_C__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OthPro P&amp;C</label>
    <length>35</length>
    <type>Text</type>
</CustomField>