force-app/main/default/objects/Prospect_Profile__c/fields/OthPro_Succession_Planning__c.field-meta.xml
<CustomField>
    <fullName>OthPro_Succession_Planning__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OthPro Succession Planning</label>
    <length>35</length>
    <type>Text</type>
</CustomField>