force-app/main/default/objects/Prospect_Profile__c/fields/OthPro_Trust__c.field-meta.xml
<CustomField>
    <fullName>OthPro_Trust__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OthPro Trust</label>
    <length>35</length>
    <type>Text</type>
</CustomField>