force-app/main/default/objects/Prospect_Profile__c/fields/OthPro_Wealth_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>OthPro_Wealth_Mgmt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OthPro Wealth Mgmt</label>
    <length>35</length>
    <type>Text</type>
</CustomField>