force-app/main/default/objects/Prospect_Profile__c/fields/Prospect_Profile_Created__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Profile_Created__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Will be created anytime a new Prospect Profile is built for reporting purposes</description>
    <label>Prospect Profile Created</label>
    <type>Checkbox</type>
</CustomField>