force-app/main/default/objects/Prospect_Profile__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <length>60</length>
    <type>Text</type>
</CustomField>