force-app/main/default/objects/Prospect_Profile__c/fields/Start_up__c.field-meta.xml
<CustomField>
    <fullName>Start_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start-up</label>
    <type>Checkbox</type>
</CustomField>