force-app/main/default/objects/Prospect_Profile__c/fields/Wealth_Management__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Management__c</fullName>
    <label>Wealth Management</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investment Management</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Wealth Planning</fullName>
            </value>
            <value>
                <fullName>Individual Wealth Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>