force-app/main/default/objects/Prospect_Profile__c/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <label>Year Business Started</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>